# yolov8-seg

./: .gitignore  CMakeLists.txt  README.md
config/: config.ini
include/: ini.h  rail.h
src/: main.cpp  rail.cpp
